crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@extract_variable_continuous_assign.sv.snap
---
source: crates/ide/src/code_action/tests.rs
assertion_line: 360
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/extract_variable_continuous_assign.sv
---
module top; logic [7:0] y, a, b; wire logic[7:0] value = a + b;
assign y = value; endmodule
