crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@extract_variable_inserts_local_before_statement.sv.snap
---
source: crates/ide/src/code_action/tests.rs
assertion_line: 360
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/extract_variable_inserts_local_before_statement.sv
---
module top; logic [7:0] y, a, b; always_comb begin logic[7:0] value = a + b;
y = value; end endmodule
