crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@extract_variable_mixed_width_add.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/extract_variable_mixed_width_add.sv
---
module top; logic [3:0] b; logic [7:0] a, y; always_comb begin logic[7:0] value = b + a;
y = value; end endmodule
