crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@factor_de_morgan_if_condition_operand.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/factor_de_morgan_if_condition_operand.sv
---
module top; always_comb if (!(a != b || c >= d)) y = 1; endmodule
