crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@factor_de_morgan_inverts_comparisons.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/factor_de_morgan_inverts_comparisons.sv
---
module top; assign y = !(a != b || c >= d); endmodule
