crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@implicit_named_port_available_without_diagnostics.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/implicit_named_port_available_without_diagnostics.sv
---
module child(input a); endmodule
module top; child u(.a()); endmodule
